--- a/src/index.css
+++ b/src/index.css
@@ -31,11 +31,11 @@ body {
 }
 
 #navbartoggle01 a {
-  font-size: 1.2rem;
+  font-size: 125%;
 }
 
 .navbar-btn {
-  font-size: 1.2rem;
+  font-size: 90%;
 }
 
 .dropdown--menu {
@@ -185,16 +185,23 @@ hr {
 
 #products-h1 {
   text-align: center;
-  font-size: 7rem;
+  font-size: 700%;
   font-weight: 800;
 }
 
 #productsMidH1 {
   font-size: 9rem;
+  padding:0% 2.5%;
   font-weight: 700;
 }
 
 .products-card {
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+
   background-color: #f9f9f9;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -216,7 +223,7 @@ hr {
 }
 
 .productsImg {
-  width: 35rem;
+  width: 90%;
   height: 25rem;
 }
 
@@ -334,6 +341,8 @@ hr {
   text-decoration: none;
 }
 
+/* templates */
+
 .templates {
   background-color: rgb(11, 10, 10);
 }
@@ -341,6 +350,11 @@ hr {
 .templates_heading {
   color: #fff;
   padding: 7% 12% 0%;
+}
+
+.display_none {
+  height: 25rem;
+  width: 25rem;
 }
 
 .temp_head_h1 {
@@ -373,5 +387,18 @@ hr {
 }
 
 .pattern img {
-  width: 90%;
+  width: 40rem;
+}
+
+@media (max-width: 1100px) {
+  .mac--image {
+    display: none;
+  }
+  .features--image {
+    display: none;
+  }
+
+  #products-h1 {
+    font-size: 400%;
+  }
 }
